Add image gallery

--- a/index.html
+++ b/index.html
@@ -26,6 +26,64 @@
         <p><q>There is no losing in jiu jitsu. You either win or you learn.</q> <br /> Grand Master Carlos Gracie Sr.</p>
       </div>
     </div>
+    <!--Image Gallery-->
+    <div class="bgimg2">
+      <div class="container">
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383090/jigorokano_u3tqkp.jpg" />
+          <div class="mask">
+            <h2>Jigoro Kano</h2>
+            <p>Text bio</p>
+              <a href="#JJ1" class="info">Read More</a>
+          </div>
+        </div>
+
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383087/carlosgracie_fvqy6c.jpg" />
+          <div class="mask">
+            <h2>Carlos Gracie</h2>
+            <p>Text bio</p>
+              <a href="#JJ2" class="info">Read More</a>
+          </div>
+        </div>
+
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383094/mitsuyomaeda_lhnbpe.jpg" />
+          <div class="mask">
+            <h2>Mitsuyo Maeda</h2>
+            <p>Text bio</p>
+              <a href="#JJ3" class="info">Read More</a>
+          </div>
+        </div>
+
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383089/heliogracie_unlf9f.jpg" />
+          <div class="mask">
+            <h2>Hélio Gracie</h2>
+            <p>Text bio</p>
+              <a href="#JJ4" class="info">Read More</a>
+          </div>
+        </div>
+
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383092/oswaldofadda_dowkox.png" />
+          <div class="mask">
+            <h2>Oswaldo Fadda</h2>
+            <p>Text bio</p>
+              <a href="#JJ5" class="info">Read More</a>
+          </div>
+        </div>
+
+        <div class="view view-first">
+          <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383086/carlsongracie_j9subc.jpg" />
+          <div class="mask">
+            <h2>Carlson Gracie</h2>
+            <p>Text bio</p>
+              <a href="#JJ6" class="info">Read More</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
   <div class="bgimg3">
     <article class="container box">
