Change background for parallax scrolling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </div>
     <!--Image Gallery-->
     <div class="bgimg2">
+
       <div class="container">
+        <div class="titles" style="text-align:center; margin-top: 30px;">
+          <h2>Jiu Jitsu Heroes Gallery</h2>
+        </div>
         <div class="view view-first">
           <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383090/jigorokano_u3tqkp.jpg" />
           <div class="mask">
@@ -80,8 +84,11 @@
     </div>
 
   <div class="bgimg3">
+    <div class="title-light" style="float:left; margin-top: 30px;margin-left: 30px;">
+      <h2>Definitions</h2>
+    </div>
     <article class="container box">
-      <span class="titles"><h1>Jiu Jitsu</h1></span>
+      <span class="titles"><h2>Jiu Jitsu</h2></span>
       <hr>
       <p>Jujutsu, also known in the West as ju-jitsu or jiu-jitsu, is a Japanese martial art and a method of close
         combat for defeating an armed and armored opponent in which one uses either a short weapon or none.
@@ -100,7 +107,7 @@
         and Brazilian jiu-jitsu, which was derived from earlier (pre–World War II) versions of Kodokan judo.</p>
       <br />
       <br />
-      <span class="titles"><h1>Brazilian Jiu Jitsu</h1></span>
+      <span class="titles"><h2>Brazilian Jiu Jitsu</h2></span>
       <hr>
       <p>Brazilian jiu-jitsu (BJJ; Portuguese: jiu-jitsu brasileiro) is a martial art and combat sport system that focuses on grappling and
         especially ground fighting. Brazilian jiu-jitsu was formed from Kodokan judo ground fighting (newaza) fundamentals that were taught
@@ -124,8 +131,8 @@
     </div>
   </div>
 
-  <div class="bgimg5">
-    <article id="JJ1" style="float:left;color:#000000;" class="box">
+  <div class="bgimg2">
+    <article id="JJ1" style="float:left;" class="box">
       <span class="titles"><h2>Jigoro Kano</h2></span>
       <hr>
       <p>Kanō Jigorō (嘉納 治五郎, 28 October 1860 – 5 May 1938) was a Japanese educator and athlete, the founder of Judo. Judo was the first Japanese martial art to gain widespread international recognition, and the first to become an official Olympic sport. Pedagogical innovations attributed to Kanō include the use of black and white belts, and the introduction of dan ranking to show the relative ranking among members of a martial art style. Well-known mottoes attributed to Kanō include "Maximum Efficiency with Minimum Effort" （精力善用 Sei-ryoku Zen-yō）and "Mutual Welfare and Benefit"（自他共栄 Ji-ta Kyō-ei）.
@@ -135,7 +142,7 @@
     </article>
   </div>
 
-  <div class="bgimg6">
+  <div class="bgimg3">
     <article id="JJ2" style="float:left;" class="box">
       <span class="titles"><h2>Carlos Gracie</h2></span>
       <hr>
@@ -144,7 +151,7 @@
     </article>
   </div>
 
-  <div class="bgimg5">
+  <div class="bgimg4">
     <article id="JJ3" style="float:left;" class="box">
       <span class="titles"><h2>Mitsuyo Maeda</h2></span>
       <hr>
@@ -153,7 +160,7 @@
     </article>
   </div>
 
-  <div class="bgimg5">
+  <div class="bgimg2">
     <article id="JJ4" style="float:left;" class="box">
       <span class="titles"><h2>Hélio Gracie</h2></span>
       <hr>
@@ -162,7 +169,7 @@
     </article>
   </div>
 
-  <div class="bgimg5">
+  <div class="bgimg3">
     <article id="JJ5" style="float:left;" class="box">
       <span class="titles"><h2>Oswaldo Fadda</h2></span>
       <hr>
@@ -171,7 +178,7 @@
     </article>
   </div>
 
-  <div class="bgimg5">
+  <div class="bgimg4">
     <article id="JJ6" style="float:left;" class="box">
       <span class="titles"><h2>Carlson Gracie</h2></span>
       <hr>
@@ -179,10 +186,10 @@
       <p>Carlson fought a total of eighteen vale tudo fights, with only one loss to Luta Livre fighter Euclides Pereira in a fight that was held in Bahia.[4] His first fight was in March 17, 1953 against capoeira practitioner Luiz "Cirandinha" Aguiar, apprentice of Mestre Sinhozinho. Carlson won by submission due to mounted strikes after over an hour of fighting. His second match was a draw against another capoeirista, Wilson "Passarito" Oliveira, in May 1953. Carlson had a rematch with Passarito in March 1954 in the longest fight of his career, which he won in the fifth 30 minute round. Most notable are his four matches with Valdemar Santana, who had defeated his uncle Hélio Gracie in a fabled match in May 1955. He beat Santana in the first fight avenging his family. In October 1955 Carlson fought Santana to a draw in a jiu-jitsu match. In 1956 and 1957 Carlson won two fights and in 1959 they fought to a draw.</p>
     </article>
   </div>
-  <div class="banner">
-    <img src="./img/belttie.gif" />
+  <div class="belt-tie">
+    <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383106/belttie_zpctqm.gif" />
   </div>
-  <div class="titles" style="text-align:center;">
+  <div class="banner-quote-white">
     <p><q>Jiu Jitsu is for the protection of the individual, the older man,  the weak, the child, the lady and the young woman from being dominanted and hurt by some bum because they don’t have the physical attributes to defend themselves. Like i never had.</q></p>
     -Helio Gracie
   </div>
