--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="bgimg1" id="home">
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
@@ -19,12 +20,11 @@
           <a href="#definitions">Jiu-Jitsu X Brazilian Jiu-Jitsu</a>
         </div>
       </div>
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+      <span style="font-size:60px;cursor:pointer;" onclick="openNav()">&#9776; Menu</span>
       <div class="caption">
         <h2>Jiu Jitsu Heroes</h2>
       </div>
   </div>
-
   <div class="banner-quote-white" id="origin">
       <h1>The Origin of Ju Jutsu / Jiu Jitsu</h1>
       <p><q>As to the origin and native land of Ju Jutsu, there are several opinions, but they are found to be mere assumptions based on narratives relating to the founding of certain schools, or some incidental records or illustrations found in the ancient manuscripts not only in Japan but in China, Persia, Germany, and Egypt. There is no record by which the origins of Ju Jutsu can be definitely established. It would, however, be rational to assume that ever since the creation, with the instinct of self-preservation, man has had to fight for existence, and was inspired to develop an art or skill to implement the body mechanism for this purpose. In such efforts, the development may have taken various courses according to the condition of life or tribal circumstance, but the object and mechanics of the body being common, the results could not have been so very different from each other. No doubt this is the reason for finding records relating to the practice of arts similar to Ju Jutsu in various parts of the world, and also for the lack of records of its origins.</q>
