Add drop down toggle to definitions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h2>Jiu Jitsu Heroes</h2>
       </div>
   </div>
+
   <div class="banner-quote-white" id="origin">
       <h1>The Origin of Ju Jutsu / Jiu Jitsu</h1>
       <p><q>As to the origin and native land of Ju Jutsu, there are several opinions, but they are found to be mere assumptions based on narratives relating to the founding of certain schools, or some incidental records or illustrations found in the ancient manuscripts not only in Japan but in China, Persia, Germany, and Egypt. There is no record by which the origins of Ju Jutsu can be definitely established. It would, however, be rational to assume that ever since the creation, with the instinct of self-preservation, man has had to fight for existence, and was inspired to develop an art or skill to implement the body mechanism for this purpose. In such efforts, the development may have taken various courses according to the condition of life or tribal circumstance, but the object and mechanics of the body being common, the results could not have been so very different from each other. No doubt this is the reason for finding records relating to the practice of arts similar to Ju Jutsu in various parts of the world, and also for the lack of records of its origins.</q>
@@ -99,9 +100,9 @@
       <h2>Definitions</h2>
     </div>
     <article class="container box">
-      <span class="titles"><h2>Jiu Jitsu</h2></span>
+      <span class="titles" id="jjj"><h2>Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
       <hr>
-      <p>Jujutsu, also known in the West as ju-jitsu or jiu-jitsu, is a Japanese martial art and a method of close
+      <p id="jjjp">Jujutsu, also known in the West as ju-jitsu or jiu-jitsu, is a Japanese martial art and a method of close
         combat for defeating an armed and armored opponent in which one uses either a short weapon or none.
         "Jū" can be translated to mean "gentle, soft, supple, flexible, pliable, or yielding." "Jutsu" can be translated
         to mean "art" or "technique" and represents manipulating the opponent's force against himself rather than confronting
@@ -116,11 +117,9 @@
         Today, jujutsu is practiced in both traditional and modern sports forms. Derived sport forms include the Olympic sport
         and martial art of judo, which was developed by Kanō Jigorō in the late 19th century from several traditional styles of jujutsu,
         and Brazilian jiu-jitsu, which was derived from earlier (pre–World War II) versions of Kodokan judo.</p>
-      <br />
-      <br />
-      <span class="titles"><h2>Brazilian Jiu Jitsu</h2></span>
+      <span class="titles" id="bjj"><h2>Brazilian Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
       <hr>
-      <p>Brazilian jiu-jitsu (BJJ; Portuguese: jiu-jitsu brasileiro) is a martial art and combat sport system that focuses on grappling and
+      <p id="bjjp">Brazilian jiu-jitsu (BJJ; Portuguese: jiu-jitsu brasileiro) is a martial art and combat sport system that focuses on grappling and
         especially ground fighting. Brazilian jiu-jitsu was formed from Kodokan judo ground fighting (newaza) fundamentals that were taught
         by a number of individuals including Takeo Yano, Mitsuyo Maeda and Soshihiro Satake. Brazilian jiu-jitsu eventually came to be its
         own combat sport through the experiments, practices, and adaptation of judo through Carlos and Hélio Gracie (who passed their knowledge
