Fix float on heroes description

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-          <a href="#home">Home</a>
           <a href="#origin">The Origin of Jiu-Jitsu</a>
           <a href="#gallery">Heroes Gallery</a>
           <a href="#definitions">Jiu-Jitsu X Brazilian Jiu-Jitsu</a>
+          <a href="#quotes">Quotes</a>
         </div>
       </div>
       <span style="font-size:60px;cursor:pointer;" onclick="openNav()">&#9776; Menu</span>
@@ -100,8 +100,8 @@
       <h2>Definitions</h2>
     </div>
     <article class="container box">
-      <span class="titles" id="jjj"><h2>Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
-      <hr>
+      <span class="titles" id="jjj" style="text-align:center;"><h2>Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
+      <hr style="width:100%;">
       <p id="jjjp">Jujutsu, also known in the West as ju-jitsu or jiu-jitsu, is a Japanese martial art and a method of close
         combat for defeating an armed and armored opponent in which one uses either a short weapon or none.
         "Jū" can be translated to mean "gentle, soft, supple, flexible, pliable, or yielding." "Jutsu" can be translated
@@ -117,8 +117,8 @@
         Today, jujutsu is practiced in both traditional and modern sports forms. Derived sport forms include the Olympic sport
         and martial art of judo, which was developed by Kanō Jigorō in the late 19th century from several traditional styles of jujutsu,
         and Brazilian jiu-jitsu, which was derived from earlier (pre–World War II) versions of Kodokan judo.</p>
-      <span class="titles" id="bjj"><h2>Brazilian Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
-      <hr>
+      <span class="titles" id="bjj" style="text-align:center;"><h2>Brazilian Jiu Jitsu</h2><p style="color:red">open ⬇️</p></span>
+      <hr style="width:100%;">
       <p id="bjjp">Brazilian jiu-jitsu (BJJ; Portuguese: jiu-jitsu brasileiro) is a martial art and combat sport system that focuses on grappling and
         especially ground fighting. Brazilian jiu-jitsu was formed from Kodokan judo ground fighting (newaza) fundamentals that were taught
         by a number of individuals including Takeo Yano, Mitsuyo Maeda and Soshihiro Satake. Brazilian jiu-jitsu eventually came to be its
@@ -142,7 +142,7 @@
   </div>
 
   <div class="bgimg2">
-    <article id="JJ1" style="float:left;" class="box">
+    <article id="JJ1" style="float:right;" class="box">
       <span class="titles"><h2>Jigoro Kano</h2></span>
       <hr>
       <p>Kanō Jigorō (嘉納 治五郎, 28 October 1860 – 5 May 1938) was a Japanese educator and athlete, the founder of Judo. Judo was the first Japanese martial art to gain widespread international recognition, and the first to become an official Olympic sport. Pedagogical innovations attributed to Kanō include the use of black and white belts, and the introduction of dan ranking to show the relative ranking among members of a martial art style. Well-known mottoes attributed to Kanō include "Maximum Efficiency with Minimum Effort" （精力善用 Sei-ryoku Zen-yō）and "Mutual Welfare and Benefit"（自他共栄 Ji-ta Kyō-ei）.
@@ -153,7 +153,7 @@
   </div>
 
   <div class="bgimg3">
-    <article id="JJ2" style="float:left;" class="box">
+    <article id="JJ2" style="float:right;" class="box">
       <span class="titles"><h2>Carlos Gracie</h2></span>
       <hr>
       <p>Carlos Gracie (September 14, 1902 – October 7, 1994) was a Brazilian martial artist who is credited with being one of the primary developers of Brazilian Jiu-Jitsu. Along with his younger brother Hélio Gracie and fellow students Luis Franca and Oswaldo Fadda, He helped develop Brazilian jiu-jitsu based on knowledge from Mitsuyo Maeda, and is widely considered to be the martial-arts patriarch of the Gracie family. He acquired his knowledge of Jiu-Jitsu by studying in Belém under Maeda and his students. As he taught the techniques to his brothers, he created a martial arts family with Hélio and with other members of the Gracie family who provided key contributions to the style.</p>
@@ -162,7 +162,7 @@
   </div>
 
   <div class="bgimg4">
-    <article id="JJ3" style="float:left;" class="box">
+    <article id="JJ3" style="float:right;" class="box">
       <span class="titles"><h2>Mitsuyo Maeda</h2></span>
       <hr>
       <p>Mitsuyo Maeda (前田 光世 Maeda Mitsuyo, born November 18, 1878  – November 28, 1941), a Brazilian naturalized as Otávio Maeda (Portuguese pronunciation: [oˈtavju mɐˈedɐ]), was a Japanese judōka (judo expert) and prizefighter in no holds barred competitions. He was also known as Count Combat or Conde Koma in Spanish and Portuguese, a nickname he picked up in Spain in 1908. Along with Antônio Soshihiro Satake (another naturalized Brazilian), he pioneered judo in Brazil, the United Kingdom, and other countries. Maeda was fundamental to the development of Brazilian Jiu-Jitsu, including through his teaching of Carlos Gracie and others of the Gracie family. He was also a promoter of Japanese emigration to Brazil. Maeda won more than 2,000 professional fights in his career. His accomplishments led to him being called the "toughest man who ever lived" and being referred to as the father of Brazilian Jiu-jitsu.</p>
@@ -171,7 +171,7 @@
   </div>
 
   <div class="bgimg2">
-    <article id="JJ4" style="float:left;" class="box">
+    <article id="JJ4" style="float:right;" class="box">
       <span class="titles"><h2>Hélio Gracie</h2></span>
       <hr>
       <p>Hélio Gracie (Portuguese: [ˈɛlju ˈɡɾejsi]; October 1, 1913 – January 29, 2009) was a Brazilian martial artist who, together with his brother Carlos Gracie, founded the martial art of Gracie jiu-jitsu, also known as Brazilian Jiu-Jitsu. According to Rorion Gracie, his father Hélio is one of the first sports heroes in Brazilian history; he was named Man of the Year in 1997 by the American martial arts publication Black Belt magazine. A patriarch of the Gracie family, he was the father of Rickson, Royler, Royce, Relson, and Ultimate Fighting Championship (UFC) co-founder Rorion Gracie, among other sons and daughters.</p>
@@ -180,7 +180,7 @@
   </div>
 
   <div class="bgimg3">
-    <article id="JJ5" style="float:left;" class="box">
+    <article id="JJ5" style="float:right;" class="box">
       <span class="titles"><h2>Oswaldo Fadda</h2></span>
       <hr>
       <p>Oswaldo Baptista Fadda (January 15, 1921 – April 1, 2005) was a practitioner of Brazilian jiu-jitsu, reaching the rank of "nono grau", a ninth grade red belt.[2] He is known for being one of the highest ranked non-Gracie black belts and also for teaching students from the poorer areas of Rio de Janeiro, where jiu-jitsu was regarded as an upper-class sport. Fadda's lineage, the most prominent second to the Carlos Gracie lineage, still survives through his links with today's teams such as Nova União, Grappling Fight Team,[3] as well as Deo Jiu-Jitsu (Deoclecio Paulo) and Equipe Mestre Wilson Jiu-Jitsu (Wilson Pereira Mattos).</p>
@@ -189,14 +189,14 @@
   </div>
 
   <div class="bgimg4">
-    <article id="JJ6" style="float:left;" class="box">
+    <article id="JJ6" style="float:right;" class="box">
       <span class="titles"><h2>Carlson Gracie</h2></span>
       <hr>
       <p>Carlson Gracie (August 13, 1932 – February 1, 2006)[1][2] was a practitioner of Brazilian jiu-jitsu. A member of the Gracie family, he was the eldest son of Carlos Gracie, and nephew to Hélio Gracie, founders of the Gracie jiu-jitsu. Carlson was an early pioneer in mixed martial arts, founding one the most successful teams of the era, which spawned many champions. In 2000, following a financial dispute, many of Carlson Gracie's students would split from him to form another MMA team, the Brazilian Top Team. </p>
       <p>Carlson fought a total of eighteen vale tudo fights, with only one loss to Luta Livre fighter Euclides Pereira in a fight that was held in Bahia.[4] His first fight was in March 17, 1953 against capoeira practitioner Luiz "Cirandinha" Aguiar, apprentice of Mestre Sinhozinho. Carlson won by submission due to mounted strikes after over an hour of fighting. His second match was a draw against another capoeirista, Wilson "Passarito" Oliveira, in May 1953. Carlson had a rematch with Passarito in March 1954 in the longest fight of his career, which he won in the fifth 30 minute round. Most notable are his four matches with Valdemar Santana, who had defeated his uncle Hélio Gracie in a fabled match in May 1955. He beat Santana in the first fight avenging his family. In October 1955 Carlson fought Santana to a draw in a jiu-jitsu match. In 1956 and 1957 Carlson won two fights and in 1959 they fought to a draw.</p>
     </article>
   </div>
-  <div class="belt-tie">
+  <div class="belt-tie" id="quotes">
     <img src="https://res.cloudinary.com/di7m4tijz/image/upload/v1538383106/belttie_zpctqm.gif" />
   </div>
   <div class="banner-quote-dark">
